--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,7 @@
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  font-size: 14px;
 }
 
 a,
@@ -32,6 +33,10 @@ a,
   }
 }
 
+
+
+/* scroll-bar */
+
 ::-webkit-scrollbar {
   width: 13px;
 }
@@ -48,4 +53,49 @@ a,
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+
+
+/* star */
+
+.star {
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+  background: linear-gradient(45deg, #FFD700 50%, #FFA500 50%);
+  clip-path: polygon(
+      50% 0%,
+      61% 35%,
+      98% 35%,
+      68% 57%,
+      79% 91%,
+      50% 70%,
+      21% 91%,
+      32% 57%,
+      2% 35%,
+      39% 35%
+  );
+  display: inline-block;
+}
+
+.star::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(45deg, #FFA500 50%, #FFD700 50%);
+  clip-path: polygon(
+      50% 0%,
+      61% 35%,
+      98% 35%,
+      68% 57%,
+      79% 91%,
+      50% 70%,
+      21% 91%,
+      32% 57%,
+      2% 35%,
+      39% 35%
+  );
+  opacity: 0.5;
 }
